fixed profile modals not fitting

--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -201,13 +201,13 @@ select {
   font-weight: 700;
 }
 .user-form-container {
-  margin-top: 150px;
+  margin-top: 100px;
   position: fixed;
-  top: 46%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #fff;
-  padding: 60px 50px;
+  padding: 30px 20px;
   filter: drop-shadow(0 7px 15px rgba(0, 0, 0, 0.2));
   border-radius: 30px;
   z-index: 11;
